--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Esquemas de Codificación.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Esquemas de Codificación.md
@@ -18,3 +18,32 @@ En el esquema NRZ, un nivel de voltaje constante durante la duración de un bit 
 Utiliza más de dos niveles de voltaje o estados para representar la información, lo que permite codificar más de un bit por elemento de señal. Ejemplos:
 - **Bipolar- AMI:** el 0 se representa por ausencia de señal y el 1 como un pulso positivo o negativo en forma alternada.
 - **Pseudoternario:** similar al anterior. El bit 1 se representa por la ausencia de señal y el 0 por pulsos positivos o negativos alternados
+#### Bifase
+Estas técnicas fuerzan al menos una transición por cada bit en un periodo. Ejemplos:
+- **Manchester:** Incorpora una transición en cada bit para garantizar la sincronización, utilizando la dirección de esta transición (bajo-alto para un '1', alto-bajo para un '0') para codificar la información.
+- **Manchester diferencial:** Utiliza la presencia o ausencia de una transición al comienzo de cada bit para codificar los datos, confiando en una transición de sincronización a mitad del intervalo de cada bit.
+
+Se usa un dispositivo MODEM (Modulador-Demodulador) para convertir entre señales digitales y analógicas. La codificación se basa en la modulación de algún parámetro de la onda portadora en función de los datos digitales recibidos. Existen 3 técnicas básicas de codificación o de modulación que transforman los datos digitales en señales analógicas:
+
+1. **ASK (Amplitude Shift Keying)**: Modifica la amplitud de una onda portadora para codificar los datos. Altas amplitudes pueden representar un '1' binario, mientras que amplitudes bajas representan un '0'. Se usa para velocidades inferiores a 1200 bps en canales telefónicos
+
+2. **FSK (Frequency Shift Keying)**: Cambia la frecuencia de la onda portadora para representar los datos. Una frecuencia puede indicar un '1' binario y otra distinta un '0'. Es menos sensible a errores que la ASK y se usa hasta 1200 bps en canales telefónicos. También se usa en transmisiones altas frecuencias (3 a 30Mhz).
+
+3. **PSK (Phase Shift Keying)**: Ajusta la fase de la onda portadora para codificar los datos. Diferentes fases de la onda pueden representar distintos bits binarios.
+
+La conversión de datos analógicos en digitales se realiza con base en un dispositivo que se llama CODEC (Codificador-Decodificador). Las dos técnicas más importantes son:
+- **Modulación por impulsos codificados (MIC):** En ingles PCM (Pulse Code Modulation), se basa en al codificación digital de la amplitud que va tomando la señal analógica a intervalos regulares. Las muestras obtenidas contienen toda la información de la señal original.
+- **Modulación delta (DM = Delta Modulation):** Codifica digitalmente la diferencia de amplitud de la señal de 2 muestras sucesivas.
+
+La MIC se realiza en dos pasos:
+1. **Paso 1:** La señal analógica se muestrea a intervalos regulares, siguiendo el teorema de muestreo, que dice que la frecuencia de muestreo debe ser al menos el doble de la frecuencia más alta presente en la señal. Cada muestra captura la amplitud de la señal en ese momento, preservando toda su información.
+
+2. **Paso 2:** Las amplitudes de estas muestras se convierten en valores enteros utilizando un número fijo de bits, por ejemplo, 3 bits permitirían 8 niveles distintos de amplitud. Esta cuantificación introduce un nivel de aproximación y, por tanto, un cierto error.
+
+Ejemplo de esto:
+Para codificar una señal de voz de 4 kHz digitalmente, se muestrea a 8 kHz, es decir, 8000 veces por segundo, para capturar toda la información según el teorema de muestreo. En el receptor, se reconstruye la señal a partir de estos datos, resultando en una aproximación de la original. La precisión mejora con técnicas como la cuantificación no lineal, que ajusta el muestreo basándose en la amplitud de la señal, permitiendo una mejor representación de la señal original.
+
+La DM analiza la amplitud de la señal analogica y detecta el sentido de la diferencia de muestras consecutivas, codificando con 1 si es incremento y 0 si es decremento. Es más sencillo que otros métodos, pero necesita muestrear la señal más rápido, a menudo a 32 kHz, para capturar bien los detalles y convertirlos en una secuencia digital de 32 Kbps.
+
+#### Transmisión de Espectro Expandido (Spread Spectrum)
+Es una técnica de comunicación que dispersa la señal de datos sobre un ancho de banda mucho más amplio de lo necesario para la transmisión de la información. Esto mejora la seguridad, la resistencia a interferencias y el acceso múltiple.
