--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Esquemas de Codificación.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Esquemas de Codificación.md
@@ -46,4 +46,11 @@ Para codificar una señal de voz de 4 kHz digitalmente, se muestrea a 8 kHz, es 
 La DM analiza la amplitud de la señal analogica y detecta el sentido de la diferencia de muestras consecutivas, codificando con 1 si es incremento y 0 si es decremento. Es más sencillo que otros métodos, pero necesita muestrear la señal más rápido, a menudo a 32 kHz, para capturar bien los detalles y convertirlos en una secuencia digital de 32 Kbps.
 
 #### Transmisión de Espectro Expandido (Spread Spectrum)
-Es una técnica de comunicación que dispersa la señal de datos sobre un ancho de banda mucho más amplio de lo necesario para la transmisión de la información. Esto mejora la seguridad, la resistencia a interferencias y el acceso múltiple.
+Esta técnica se puede usar para transmitir tanto señales analógicas como digitales, mediante la utilización de una señal analógica. Consiste en expandir la información de la señal sobre un ancho de banda mayor para con ello dificultar las interferencias y su interpretación.
+Tiene dos variantes que se utilizan en redes de datos y de telefonía inalámbricas.
+
+##### Spread Spectrum - Salto de frecuencias
+En esta tecnica, la señal se modula cambiando entre distintas frecuencias basándose en una secuencia pseudoaleatoria conocida tanto por el transmisor como por el receptor. Esto hace que la señal sea más difícil de interceptar o interferir, ya que solo quien conoce la secuencia puede seguir los cambios de frecuencia y decodificar la señal correctamente.
+
+##### Spread Spectrum - Secuencia Directa
+En esta técnica, cada bit de información se mezcla con una secuencia más larga de bits pseudoaleatorios, lo que resulta en una señal más ancha y difícil de interceptar. La señal se expande al combinar los datos con estos bits adicionales mediante una operación lógica, generalmente un OR-exclusivo, lo que dispersa la energía de la señal original a lo largo de un espectro de frecuencias más amplio.
