Se continuo con la primera parte de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
@@ -24,8 +24,37 @@ Códigos mas utilizados: ASCII y EBCDIC.
 #### Protocolos orientados al bit
 
 Mas modernos que los orientados al carácter. Superan las dificultades que se le presentan a estos últimos en determinados casos.
-Ventajas: 
-- Independencia del código utilizado: 
-- Gran eficiencia en la transmisión: 
-- Gran fiabilidad en las transmisiones: 
 
+Ventajas: 
+- Independencia del código utilizado: Tratar de transmitir un conjunto de bits que pueden   configurar información en cualquier código.
+- Gran eficiencia en la transmisión: La relación entre los bits de información y control es alta.
+- Gran fiabilidad en las transmisiones: Se dispone de métodos de control para la detección y recuperar errores con eficacia.
+
+Protocolos mas extendidos:
+- HDLC (High-level Data Link Control) de la ISO
+- ADCCP (Advanced Data Communication Control Procedures) de ANSI
+- LAPB (Link Access Procedure Balanced) del CCITT
+- SDLC (Synchronous Data Link Control) de IBM
+
+### Estructura de la trama HDLC
+
+![[Trama_HDLC.png]]
+
+F - Indicador (Flag): sirve como separador de tramas, sincronizador, relleno entre tramas.
+A - direccion (Address): designa la estación receptora en comandos y emisora en respuestas. Puede identificar hasta 256 terminales, aun mas si se amplia este campo.
+C - Control: Determina el tipo de trama y contiene los números de secuencia.
+I - Información: contiene datos de capas superiores del modelo OSI, solo esta presente en 2 tipos de tramas (I, FRMR).
+FCS - Secuencia de Verificación de Trama (Frame Control Sequence): se usa para control de errores, conteniendo el resto de la división del contenido de la trama por un polinomio generador (CRC-CCITT)
+
+### Características destacadas
+
+- Canal activo: La red o el ETD esta transmitiendo una trama, una secuencia de anulación de trama o indicadores sucesivos.
+- Canal Inactivo: Se detecta la transmisión de 15 o mas "1" consecutivos,
+- Trama invalida: No esta comprendida entre 2 indicadores o hay menos de 32 bits entre estos.
+- Anulación de trama: Hay entre 7 y 14 bits seguidos (sin ceros)
+
+### Comandos y respuestas del protocolo HDLC 
+
+Los comandos se envían por un extremo, exigiendo o no una respuesta del otro extremo.
+
+Tipos básicos de trama: 
