Se continuo con al parte 1 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
@@ -58,3 +58,127 @@ FCS - Secuencia de Verificación de Trama (Frame Control Sequence): se usa para 
 Los comandos se envían por un extremo, exigiendo o no una respuesta del otro extremo.
 
 Tipos básicos de trama: 
+- Información
+- Supervisión
+- Sin numerar
+
+El campo de **Control** de la trama indica su tipo y en algunos casos contiene información para el manejo de protocolos.
+
+### Campo de control en tramas de información
+
+usadas para transmitir mensajes de nivel superior que serán fraccionados y numerados para su reconstrucción en el destino.
+
+![[Campo_de_control_en_tramas_de_información.png]]
+
+N(S): Numero de secuencia enviada
+P/F: Poll / Trama final
+N(R): Numero de secuencia a recibir
+
+### Campo de control en tramas de supervisión
+
+Estas tramas sirven para funciones de control de flujos, petición de estados, etc.
+Funciones: 
+- Receptor preparado (Receive Ready-RR):  Indica que la estación receptora esta preparado para recibir tramas, o que esta solicitando el estado de la estación emisora, o esta pidiendo la validación de una trama ya transmitida.
+- Receptor no preparado (Receive Not Ready-RNR): Indica que la estación receptora no esta disponible para recibir tramas.
+- Rechazo (Reject-REJ): Invalida la trama que es indicada por su numero de secuencia, pidiendo que se la retransmita y a las posteriores (si hay).
+- Rechazo selectivo (Selective Reject-SREJ): invalida la trama que es indicada por su numero de secuencia, pidiendo que se la retransmita.
+
+![[Campo_de_control_en_tramas_de_supervisión.png]]
+
+P/F: Poll / Trama final
+N(R): Numero de secuencia a recibir
+
+### Campo de control en tramas no numeradas
+
+Estas tramas se usan para establecer y liberar enlaces y otras funciones de control.
+
+Comandos de selección del modo de operación:
+- SNRM (Set Normal Response Mode)
+- SARM (Set Asynchronous Response Mode)
+- SABM (Set Asynchronous Balanced Mode)
+
+Comandos de desconexión (Disconnect-DISC): Indica la terminación y posterior desconexión.
+
+Respuesta de reconocimiento no numerado (Unnumbered Acknowledge-UA): Indica que se recibió y ejecuto un comando de selección de modo de operación (transmisión) o de desconexión.
+
+Respuesta de no aceptación de modo de transmisión (Disconnected Mode-DM): Indica que no se pudo entrar en el modo de transmisión solicitado o solicita una orden de selección de modo.
+
+Respuesta de rechazo de trama (Frame Reject-FRMR): indica que se rechazo la trama transmitida.
+
+![[Campo_de_control_en_tramas_no_numeradas.png]]
+
+P/F: Poll / Trama final
+
+### Algunos ejemplos de funcionamiento del protocolo HDLC
+
+![[Ejemplos_HDLC.png]]
+
+### Servicios de capa de enlace
+
+**Sin conexión y sin asentimiento:** 
+- La emisora transmite tramas independientes hacia la receptora, esta ultima no envía una señal de confirmación.
+- En caso de que la trama se pierda su recuperación se da en capas superiores.
+- Servicio ideal cuando hay baja tasa de error y para trafico en tiempo real (voz).
+
+**Sin conexión y con asentimiento:**
+- Cada trama transmitida es confirmada individualmente.
+- Se sabe si la trama llego bien.
+- Si no hay confirmación después de cierto tiempo se puede volver a transmitir.
+
+**Orientado a conexión:**
+- La maquina transmisora y receptora establecen una conexión antes de transmitir.
+- Cada trama transmitida es numerada. 
+- La capa de enlace se asegura que cada trama se reciba solo una vez y en el orden correcto.
+- En esta modalidad las transmisiones tienen tres partes:
+	- La conexión es establecida cuando ambas partes han iniciado las variables y contadores.
+	- una o mas tramas se transmiten.
+	- La conexión se libera.
+
+**Delimitación de tramas:**
+- La capa de enlace divide el flujo de bits en tramas y calcula un código de redundancia para cada una.
+- Existen diferentes métodos para dividir el flujo de bits:
+	- Cuenta de caracteres. 
+	- Caracteres de inicio y fin, con inserción de caracteres. 
+	- Banderas de inicio y final, con inserción de bit. 
+	- Violaciones de código en la capa física
+
+### Métodos de delimitación de tramas:
+
+**Cuenta de caracteres:**
+Se utiliza un campo en la cabecera para especificar el número de caracteres en la trama.
+
+![[Cuenta_de_caracteres.png]]
+
+Problema: Si el carácter de cuenta se distorsiona por el ruido, el receptor se desincronizada y no podrá encontrar el inicio de la siguiente trama.
+
+**Inserción de caracteres:**
+- Cada trama comienza y termina con la secuencia de caracteres ASCII: DLE STX --------- DLE ETX
+- Al momento de sincronizar el receptor solo debe buscar estos caracteres.
+- Ej.: DLE STX A DLE B DLE ETX ; DLE STX A DLE B DLE ETX .
+
+Desventaja: gran asociación con código de caracteres (ASCII).
+
+**Inserción de bits:**
+- Cada trama comienza y termina con un patrón de bits llamado bandera o flag (01111110).
+- La transparencia para no confundir datos de información con datos de control se da cuando:
+	- Si el emisor encuentra cinco bits 1 seguidos, inserta un 0.
+	- Si el receptor encuentra cinco bits 1 seguidos por un 0, como entrada, entonces elimina el 0.
+- Ej.: 
+	- Trama original: 0 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 1 0
+	- Trama después del emisor: 0 1 1 0 1 1 1 1 1 **0** 1 1 1 1 1 **0** 1 1 1 1 1 **0** 1 0 0 1 0
+	- Trama después del receptor: 0 1 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 1
+
+**Violación de código en la capa física:**
+
+Usada en la capa física con codificación Manchester. Se Utiliza las combinaciones de alto-bajo y bajo-alto para encapsular la trama. 
+
+### Detección y corrección de errores: 
+
+#### Código:
+
+- Códigos de corrección de errores: En cada bloque de datos transmitido se incluye información redundante para que el receptor pueda deducir que carácter debió ser enviado. 
+- Códigos de detección de errores: Se incluye solo la redundancia necesaria para que el receptor sepa que hubo un error, sin saber de que tipo, y pida la retransmisión. 
+
+#### Protección contra los errores
+
+- Detección:
