Se siguio con la parte 1 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
@@ -181,4 +181,19 @@ Usada en la capa física con codificación Manchester. Se Utiliza las combinacio
 
 #### Protección contra los errores
 
-- Detección:
+- Detección: 
+	- Eco 
+	- Control de paridad por bloque (VRC) 
+	- Control de paridad por carácter (LRC) 
+	- División por polinomio generador (CRC, FCS)
+
+- Corrección: 
+	- Retransmisión 
+	- Corrección automática (por ej. FEC Forward Error Correction)
+
+### Códigos para detección de errores
+
+- VRC (Vertical Redundancy Check):  El emisor agrega a cada carácter un bit el cual al ser sumado en conjunto con toda la secuencia da un valor par o impar, anteriormente definido. El receptor repite la operación y compara con el bit recibido, si son iguales se da por correcto el carácter.
+- LRC (Longitudinal Redundancy Check): Adición al VRC, agrega al final de un bloque de caracteres una secuencia de bits individuales cuya suma lógica de todos los bits de la misma posición da par o impar. El receptor repite la operación y compara con la secuencia recibida, dando por correcto el carácter si son iguales. Permite detectar dos bits erróneos producidos en el mismo carácter.
+- CRC (Cyclic Redundancy Check):
+	- 
