Se continuo con la parte 1 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
@@ -196,4 +196,27 @@ Usada en la capa física con codificación Manchester. Se Utiliza las combinacio
 - VRC (Vertical Redundancy Check):  El emisor agrega a cada carácter un bit el cual al ser sumado en conjunto con toda la secuencia da un valor par o impar, anteriormente definido. El receptor repite la operación y compara con el bit recibido, si son iguales se da por correcto el carácter.
 - LRC (Longitudinal Redundancy Check): Adición al VRC, agrega al final de un bloque de caracteres una secuencia de bits individuales cuya suma lógica de todos los bits de la misma posición da par o impar. El receptor repite la operación y compara con la secuencia recibida, dando por correcto el carácter si son iguales. Permite detectar dos bits erróneos producidos en el mismo carácter.
 - CRC (Cyclic Redundancy Check):
-	- 
+	- También llamado Código Polinómico o Código de Redundancia Cíclica ( CRC).
+	- Método mas difundido de detección de errores.
+	- Se basa en tratar las cadenas de bits como representaciones de polinomios con coeficientes de 0 y 1.
+	- Implementado en hardware.
+	- Una trama de k bits se considera como la lista de coeficientes de un polinomio que van de X^K-1 a X^0
+	- Cuando se emplea este código, el transmisor y el receptor acuerdan un polinomio generador, G (x) por adelantado.
+	- Se calcula la suma de comprobación para una trama y se anexa al final de la trama, de tal manera que la suma + la trama sea divisible por G (x).
+	- Cuando el receptor recibe esta trama con la suma de comprobación, la divide entre G(x). Si hay resto, entonces ha habido un error de transmisión.
+	- Ej.:
+		- Trama : 1010001101 
+		- Generador: 110101 ( x5+x4+x2+1)
+		- Trama mas ceros según grado de G(x): 1010001101 00000
+
+### Protocolos de control de flujo
+#### Control de flujo de la transmisión
+- Consiste en regular la velocidad de transmisión de datos para no saturar al emisor.
+- Los protocolos de capa 2 (capa de enlace datos) tienen reglas para saber cuando es posible enviar una trama.
+- Generalmente, el receptor autoriza expresa o implícitamente la transmisión.
+- Consideraciones a tener en cuenta: 
+	- Tiempo de procesamiento (Capas de red). 
+	- Disponibilidad de buffers (Espacio) .
+	- Perfomance del canal de comunicación.
+#### Protocolos de ventana corrediza
+- Cada trama de salida tiene un numero de secuencia con un intervalo desde 0 hasta un máximo.
