Se finalizo la parte 1 y se comenzo con la parte 2 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/1. Capa de enlace de datos.md
@@ -121,7 +121,7 @@ P/F: Poll / Trama final
 - Servicio ideal cuando hay baja tasa de error y para trafico en tiempo real (voz).
 
 **Sin conexión y con asentimiento:**
-- Cada trama transmitida es confirmada individualmente.
+- Cada trama transmitida es confirmada individualmente. (ACK)
 - Se sabe si la trama llego bien.
 - Si no hay confirmación después de cierto tiempo se puede volver a transmitir.
 
@@ -220,3 +220,50 @@ Usada en la capa física con codificación Manchester. Se Utiliza las combinacio
 	- Perfomance del canal de comunicación.
 #### Protocolos de ventana corrediza
 - Cada trama de salida tiene un numero de secuencia con un intervalo desde 0 hasta un máximo.
+- En cualquier instante, el transmisor mantiene un grupo de números de secuencia que corresponde a las tramas que tiene permitido enviar. ( Ventana transmisora)
+- El receptor mantiene una ventana receptora, correspondiente al grupo de tramas que puede recibir.
+- Las ventanas del emisor y receptor no tienen por que ser del mismo tamaño.
+- Hay ventanas fijas y otras que crecen y disminuyen a medida que se envían y se reciben las tramas.
+- Necesidad de transmitir datos en ambas direcciones (transmisión full duplex) y con varias tramas en el enlace.
+- Emisor y receptor usan el mismo canal para enviar tramas y ACK (acuses)
+- Mejora = Piggybacking 
+	- El receptor espera la próxima trama de salida e incorpora el ACK.
+- Ventaja: mejor aprovechamiento del ancho de banda del canal.
+- Ej.: ![[Ejemplo_ventanas.png]]
+##### Ventana transmisora
+- Los números de secuencia en la ventana transmisora indican las tramas no reconocidas (sin ACK´s)
+- Cuando llega un paquete nuevo de la capa de red, se le da el numero de secuencia mayor y la orilla superior de la ventana avanza en uno.
+- Cuando se recibe un ACK la orilla inferior avanza en uno.
+- La ventana mantiene siempre los números de secuencia de las tramas no reconocidas.
+##### Ventana receptora
+- El tamaño de la ventana receptora corresponde a la cantidad de tramas que puede aceptar.
+- Si una trama cae fuera de la ventana, se descarta.
+- Cuando se recibe una trama con el numero de secuencia igual al extremo inferior de la ventana, se pasa a la capa de red, se genera el acuse y se avanza la ventana en uno.
+
+### Mecanismos de solicitud de repetición automática
+
+- ARQ (Automatic Repeat Request) 
+- Variantes normalizadas: 
+	- ARQ con parada y espera 
+	- ARQ con adelante-atrás N 
+	- ARQ con rechazo selectivo  
+- Procedimientos basados en la técnica de control de flujo y para efectuar confirmaciones o retransmisiones de tramas perdidas o dañadas.
+
+#### ARQ con parada y espera (PROTOCOLO SIMPLEX)
+
+- Cuando los datos se transmiten solo en una dirección se tienen protocolos sencillos, como:
+	- Parada y espera: el transmisor envía una trama y espera un acuse (ACK) antes de continuar.
+	- Desventaja: uso ineficiente del medio en enlaces de grandes distancias y razón de datos elevada.
+
+#### Protocolos con control de errores
+
+- ARQ adelante –atrás –N :
+	- Una estación envía una serie de tramas numeradas secuencialmente.
+	- Si no hay errores, el destino confirma las tramas en forma normal.
+	- Al detectarse un error en una trama, el destino envía una respuesta negativa.
+	- Hasta que no se reciba correctamente la trama errónea, se descarta esa y las posteriores.
+	- Entonces, el transmisor debe reenviar la trama con error mas todas las posteriores.
+
+- ARQ con rechazo selectivo – repetición selectiva:
+	- Las tramas que se retransmiten son las que tienen error.
+		- Es decir las que son rechazadas (indicando nº secuencia) o por fin de temporizador.
