Se continuo con la parte 2 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
@@ -11,3 +11,9 @@
 - El IEEE (Instituto de Ingenieros Eléctricos y Electrónicos) emite estándares sobre redes de área local (LAN) y redes de área metropolitana (MAN).
 - Estándares para niveles 1 y 2 del modelo OSI. (Capa de enlace y Capa física).
 - Incorporó estándar para tecnologías de redes de área personal (PAN): Bluetooth
+
+### Especificaciones 802.x del IEEE
+
+![[especificaciones_ieee_802.png]]
+
+### Normalización en LAN
