Se continuo con la parte 2 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
@@ -17,3 +17,25 @@
 ![[especificaciones_ieee_802.png]]
 
 ### Normalización en LAN
+
+El nivel de enlace fue dividido en 2 subniveles:
+	MAC: control de acceso al medio (Medium Access Control) 
+	LLC: control de enlace lógico (Logical Link Control)
+
+![[normalizacion_lan.png]]
+
+### Funciones básicas de LLC y MAC
+
+LLC (control enlace lógico):
+	iniciar el intercambio de señales de control.
+	organizar el flujo de datos.
+	interpretar comandos recibidos y generar repuesta.
+	acciones sobre control y recuperación de errores.
+
+MAC (control acceso al medio):
+	armado y desarmado de trama. 
+	controlar errores.
+	adquisición derecho al uso del medio.
+
+### Métodos de acceso controlado
+
