Se continuo con la parte 2 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
@@ -39,3 +39,20 @@ MAC (control acceso al medio):
 
 ### Métodos de acceso controlado
 
+Las estaciones no pueden transmitir si no se las habilita para ello por turno:
+	Centralizado:
+		Polling : estación maestra (primaria) invita a las estaciones esclavas (secundarias) su mensaje.
+		Selecting: mecanismo usado cuando la primaria debe enviar mensajes a una secundaria.
+	Distribuido:
+		Un elemento testigo (token) circula entre las estaciones y la que lo tiene está habilitada para transmitir. Por ej. Token Ring
+
+### Métodos de acceso aleatorio - Contienda
+
+Cada estación puede transmitir cuando tiene datos para hacerlo o cuando lo determina localmente. Si dos de ellas inician la transmisión simultáneamente, se produce una colisión.
+
+Procedimientos para resolver la situación:
+	Sin escucha: las estaciones no se dan cuenta de la colisión y procedimientos de nivel superior obligan a transmitir los datos. Ej: ALOHA puro
+	Con escucha: las estaciones detectan la colisión y reintentan transmitir luego de un tiempo variable para cada una. Ej.: CSMA/CD
+
+### ALOHA
+
