Se continuo con la parte 2 de la unidad 3

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
@@ -56,3 +56,51 @@ Procedimientos para resolver la situación:
 
 ### ALOHA
 
+- Los usuarios transmiten cuando tienen datos para hacerlo a través de un sistema de radio.
+- Alta probabilidad de colisiones entre tramas, quedando invalidadas.
+- Si el emisor no recibe la confirmación repite el envío al cabo de un cierto tiempo.
+ 
+![[aloha.png]]
+
+### ALOHA Ranurado
+
+- Sabiendo el tamaño de la trama, el tiempo se divide en slots (ranuras) igual al tiempo que se necesita para transmitir esa trama.
+- Como hay sincronización, los nodos comienzan a transmitir tramas solo al inicio del slot.
+- Si hay colisión de tramas, todos la detectan antes de que termine el slot.
+- Aleatoriamente se elige un slot siguiente para transmitir, hasta poder hacerlo sin colisión.
+
+![[aloha_ranurado.png]]
+
+### Carrier sense multiple access / Collision Detection 
+
+CSMA (Acceso Múltiple con detección de portadora):
+- La terminal que tiene datos para transmitir detecta primero si hay otra transmitiendo (sondea la portadora). Si otro nodo está transmitiendo esperará un tiempo aleatorio y si no transmite.
+- Si hay colisión no recibe confirmación (ACK) del receptor.
+
+CSMA/CD (CSMA con detección de colisiones):
+- Similar al caso anterior en los primeros pasos, salvo que detecta si hay colisión durante el proceso de transmisión.
+- No recibe confirmación del receptor ya que supone la correcta recepción si no hay colisión.
+
+### CSMA
+
+1.- Detección de la señal portadora:
+	A trata de transmitir a B, pero queda suspendida porque el medio de transmisión está ocupado.
+	
+	 ![[deteccion_señal_csma.png]]
+
+2.- Transmisión de la trama:
+	Cuando detecta que el medio de transmisión está libre, A transmite una trama a B.
+	
+	![[transmicion_csma.png]]
+
+3.- Recepción de la trama ACK:
+	B chequea la FCS (Frame Check Sequence). Si la trama es válida, B devuelve una trama ACK a A.
+	
+	![[recepcion_ack.png]]
+
+4.-Transmisión simultánea:
+	Antes que la señal portadora de A llegue a B, la de D es enviada al medio de transmisión.
+	
+	![[transmision_simultanea_csma.png]]
+
+5.-
