Se finalizo la parte 2 de la unidad 3 y se craron las carpetas de la unidad 4 a la 6

--- a/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 3/2. La capa de enlace en LAN.md
@@ -103,4 +103,106 @@ CSMA/CD (CSMA con detección de colisiones):
 	
 	![[transmision_simultanea_csma.png]]
 
-5.-
+5.- Colisión:
+	La trama de A colisiona con la de D sobre el medio de transmisión. B chequea la FCS del paquete recibido; como esta es incorrecta, B no devuelve una trama ACK.
+	
+	![[colision_csma.png]]
+
+6.-Retransmisión de la trama:
+	Como la trama ACK no es devuelta, A retransmite la trama después de un tiempo arbitrario.
+	
+	![[retransmision_csma.png]]
+
+### CSMA/CD (Detección de Colisiones)
+
+1.- Transmisión de trama:
+	- Cuando el medio está inactivo, A transmite una trama a B. 
+	- Luego de la transmisión, A continúa verificando si hay una colisión sobre el medio de transmisión. 
+	- Después de transmitir la trama sin detectar colisión, A asume que la transmisión ha sido completada con éxito, y no es necesario el ACK.
+
+	![[transmision_csma_cd.png]]
+
+2.- Colisión de trama: 
+	Mientras transmite una trama, A monitorea el medio de transmisión. Cuando una colisión es detectada porque B inició la transmisión simultáneamente, A y B detienen la transmisión.
+
+3.- Retransmisión de la trama: 
+	- Después de un tiempo arbitrario de demora, A retransmite la trama. 
+	- Como B hace lo mismo la posibilidad de nueva colisión es mínima.
+
+### Token ring
+
+- Usa una trama (token o testigo) que circula por el anillo. Un bit de la trama indica si está libre u ocupado.
+- Si una estación desea transmitir, espera que le llegue el token, activa su bit de control, e inserta a continuación los datos a enviar, la dirección de destino y la propia.
+- La trama circula por el anillo hasta llegar a la estación destinataria, la cual copia su contenido y la retransmite sobre el anillo.
+- Al arribar la trama a la estación emisora, esta la retira de la circulación y genera un nuevo token.
+- Ej.: A envía una trama a C y luego C envía tramas a D y A.
+- ![[token_ring.png]]
+
+### ETHERNET
+
+Ethernet es un producto comercial “de facto” (Xerox-DEC-Intel) Se compone de hardware y software que trabajan de manera coordinada para envío de datos entre computadoras.
+Elementos básicos:
+	Trama, Protocolo de Control de Acceso al Medio (CSMA/CD), Componentes de señalización, Medios físicos (Coaxil, Par Trenzado, Fibra Óptica)
+
+![[ethernet.png]]
+
+Tipos de cableado para redes ethernet:
+	![[ethernet_cable.png]]
+	
+
+### Direcciones ETHERNET - Mac address - Direccion fisica
+
+- Las redes Ethernet definen un esquema de direccionamiento de 48 bits.
+- Cada maquina conectada a una red Ethernet tiene un numero único de 48 bits. Ejemplo: 8:0:39:0:2f:26.
+- Los fabricantes de hardware Ethernet solicitan las direcciones al IEEE, quien las administra y se asegura que sean únicas.
+- También llamada la dirección física de una maquina conectada en red.
+- La dirección se fija en la tarjeta de red o NIC (Network Interface Card).
+- El software que acompaña a la tarjeta de red se conoce como Driver.
+
+- #### Direcciones de ethernet:
+		![[direcciones_ethernet.png]]
+
+- #### Formato de trama:
+	![[trama_ethernet.png]]
+	- Trama mínima: 64 bytes (46+18) 
+	- Trama máxima: 1500 bytes (x)
+
+### Protocolo de subcapa MAC
+
+- La trama máxima del estándar 802.3 es de 1492 bytes. -
+- La trama máxima Ethernet de 1500 bytes. -
+- Estos valores se conocen con el nombre de MTU (Maximun Transfer Unit). Es la mayor cantidad de datos que se pueden transferir por unidad a través de una determinada red física. Es determinado por el hardware de red.
+
+### Retardo de propagación
+
+Relacionado con el tamaño de la trama. 
+Es el tiempo máximo de trama para propagarse al destino y volver. 
+Transmitiendo el mínimo de 64 bytes, se asegura que todas las estaciones detecten las colisiones.  Entonces, las tramas con menos bytes se rellenan a 64 bytes. 
+Pasando 64 bytes a tiempo nos da 51.2 µseg
+
+![[retardo_propagacion.png]]
+
+Entonces:
+- A medida que aumenta la velocidad de la red, la longitud mínima de la trama debe ser mayor o, en proporción, la longitud máxima del cable debe disminuir. Ej.:
+	Para una LAN de 2500 mts operando a 1 Gbps, el tamaño mínimo de trama sería 6400 bytes.
+
+### Algoritmo de retroceso exponencial binario
+
+- Tras una colisión, el tiempo se divide en ranuras discretas de longitud igual al tiempo de propagación (51.2 µ). 
+- Tras la primera colisión, cada estación espera 0 o 1 tiempo de ranura para volver a intentar. 
+- Tras la segunda colisión, cada una toma 0,1,2 o 3 tiempos al azar. 
+- En general, tras i colisiones se toma un numero aleatorio entre 0 y 2^i 
+- Después de 10 colisiones, el intervalo aleatorio se congela en 1023 ranuras. 
+- Tras 16 colisiones, el controlador informa del fracaso a la maquina.
+
+### Comparación de características de ethernet y token ring
+
+Ethernet:
+- Alto rendimiento con bajas condiciones de carga.  
+- Aumento del tiempo de retardo de transferencia de tramas frente a elevados niveles de carga.
+
+Token Ring:
+- Posibilidad de determinación de los tiempos de retardo en la etapa de planeamiento.  
+- Bajo rendimiento cuando la carga es escasa debido a la circulación del token y a los procesos de mantenimiento.
+
+![[comparacion.png]]
